(#226) providing the authentication check for the frineds search and notifications, change js rendering mode

--- a/MiniSpace.Web/src/MiniSpace.Web/Pages/Notifications/AllNotifications.razor
+++ b/MiniSpace.Web/src/MiniSpace.Web/Pages/Notifications/AllNotifications.razor
@@ -74,7 +74,17 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        await LoadNotifications(new LoadDataArgs { Skip = 0, Top = pageSize, OrderBy = "createdAt desc" });
+        await IdentityService.InitializeAuthenticationState(); 
+
+        if (IdentityService.IsAuthenticated)
+        {
+            await LoadNotifications(new LoadDataArgs { Skip = 0, Top = pageSize, OrderBy = "createdAt desc" });
+            StateHasChanged();
+        }
+        else
+        {
+            NavigationManager.NavigateTo("/login");
+        }
     }
 
    
