--- a/MiniSpace.Web/src/MiniSpace.Web/Pages/Account/ShowAccount.razor
+++ b/MiniSpace.Web/src/MiniSpace.Web/Pages/Account/ShowAccount.razor
@@ -103,6 +103,8 @@ else
     private string profileImage = string.Empty;
     private TaskCompletionSource<bool> clientChangeCompletionSource;
     private bool isUploading = false;
+
+    private bool isLoading = true;
     
     protected override async Task OnInitializedAsync()
     {
